feat(usage): Add usage statistics tracking and UI
- Implemented analytics event tracking for UI opened, app launched, and action executed.
- Created a new WoxUsageStats entity to hold usage statistics data.
- Added a WoxSettingUsageView to display usage statistics in the settings module.
- Enhanced the EntityFactory to include WoxUsageStats parsing.
- Updated the settings view to include a new usage statistics section with charts and top apps/plugins lists.
- Improved code formatting and readability across multiple files.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -195,6 +195,26 @@
   "ui_data_backup_type": "Type",
   "ui_data_backup_type_auto": "Auto",
   "ui_data_backup_type_manual": "Manual",
+  "ui_usage": "Usage",
+  "ui_usage_opened": "Wox opened",
+  "ui_usage_app_launches": "App launches",
+  "ui_usage_apps_used": "Apps used",
+  "ui_usage_actions": "Actions",
+  "ui_usage_opened_by_hour": "Opened by hour",
+  "ui_usage_opened_by_weekday": "Opened by weekday",
+  "ui_usage_most_active_hour": "Most active hour",
+  "ui_usage_most_active_day": "Most active day",
+  "ui_usage_top_apps": "Top applications",
+  "ui_usage_top_plugins": "Top plugins",
+  "ui_usage_no_data": "No data yet",
+  "ui_weekday_sun": "Sun",
+  "ui_weekday_mon": "Mon",
+  "ui_weekday_tue": "Tue",
+  "ui_weekday_wed": "Wed",
+  "ui_weekday_thu": "Thu",
+  "ui_weekday_fri": "Fri",
+  "ui_weekday_sat": "Sat",
+  "ui_refresh": "Refresh",
   "ui_ai_model_selector_name": "Name",
   "ui_ai_model_selector_model_name": "Model name",
   "ui_ai_model_selector_no_models_title": "No AI provider configured",
