--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -193,6 +193,26 @@
   "ui_data_backup_type": "Tipo",
   "ui_data_backup_type_auto": "Auto",
   "ui_data_backup_type_manual": "Manual",
+  "ui_usage": "Uso",
+  "ui_usage_opened": "Wox aberto",
+  "ui_usage_app_launches": "Inicializações de apps",
+  "ui_usage_apps_used": "Apps usados",
+  "ui_usage_actions": "Ações",
+  "ui_usage_opened_by_hour": "Aberturas por hora",
+  "ui_usage_opened_by_weekday": "Aberturas por dia da semana",
+  "ui_usage_most_active_hour": "Hora mais ativa",
+  "ui_usage_most_active_day": "Dia mais ativo",
+  "ui_usage_top_apps": "Principais aplicativos",
+  "ui_usage_top_plugins": "Principais plugins",
+  "ui_usage_no_data": "Sem dados ainda",
+  "ui_weekday_sun": "Dom",
+  "ui_weekday_mon": "Seg",
+  "ui_weekday_tue": "Ter",
+  "ui_weekday_wed": "Qua",
+  "ui_weekday_thu": "Qui",
+  "ui_weekday_fri": "Sex",
+  "ui_weekday_sat": "Sáb",
+  "ui_refresh": "Atualizar",
   "ui_ai_model_selector_name": "Nome",
   "ui_ai_model_selector_model_name": "Nome do modelo",
   "ui_ai_model_selector_no_models_title": "Não há provedor de IA configurado",
