--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -193,6 +193,26 @@
   "ui_data_backup_type": "Тип",
   "ui_data_backup_type_auto": "Авто",
   "ui_data_backup_type_manual": "Ручной",
+  "ui_usage": "Статистика",
+  "ui_usage_opened": "Открытия Wox",
+  "ui_usage_app_launches": "Запуски приложений",
+  "ui_usage_apps_used": "Использовано приложений",
+  "ui_usage_actions": "Действия",
+  "ui_usage_opened_by_hour": "Открытия по часам",
+  "ui_usage_opened_by_weekday": "Открытия по дням недели",
+  "ui_usage_most_active_hour": "Самый активный час",
+  "ui_usage_most_active_day": "Самый активный день",
+  "ui_usage_top_apps": "Топ приложений",
+  "ui_usage_top_plugins": "Топ плагинов",
+  "ui_usage_no_data": "Данных пока нет",
+  "ui_weekday_sun": "Вс",
+  "ui_weekday_mon": "Пн",
+  "ui_weekday_tue": "Вт",
+  "ui_weekday_wed": "Ср",
+  "ui_weekday_thu": "Чт",
+  "ui_weekday_fri": "Пт",
+  "ui_weekday_sat": "Сб",
+  "ui_refresh": "Обновить",
   "ui_ai_model_selector_name": "Имя",
   "ui_ai_model_selector_model_name": "Имя модели",
   "ui_ai_model_selector_no_models_title": "Провайдер ИИ не настроен",
