--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -195,6 +195,26 @@
   "ui_data_backup_type": "类型",
   "ui_data_backup_type_auto": "自动",
   "ui_data_backup_type_manual": "手动",
+  "ui_usage": "使用情况",
+  "ui_usage_opened": "Wox 打开次数",
+  "ui_usage_app_launches": "应用启动次数",
+  "ui_usage_apps_used": "使用过的应用",
+  "ui_usage_actions": "动作次数",
+  "ui_usage_opened_by_hour": "按小时统计",
+  "ui_usage_opened_by_weekday": "按星期统计",
+  "ui_usage_most_active_hour": "最活跃时段",
+  "ui_usage_most_active_day": "最活跃星期",
+  "ui_usage_top_apps": "常用应用",
+  "ui_usage_top_plugins": "常用插件",
+  "ui_usage_no_data": "暂无数据",
+  "ui_weekday_sun": "周日",
+  "ui_weekday_mon": "周一",
+  "ui_weekday_tue": "周二",
+  "ui_weekday_wed": "周三",
+  "ui_weekday_thu": "周四",
+  "ui_weekday_fri": "周五",
+  "ui_weekday_sat": "周六",
+  "ui_refresh": "刷新",
   "ui_ai_model_selector_name": "名称",
   "ui_ai_model_selector_model_name": "模型名称",
   "ui_ai_model_selector_no_models_title": "未配置 AI 提供商",
