feat(update): add update plugin and UI for version management

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -419,19 +419,50 @@
   "plugin_url_open_in_browser": "Open in browser",
   "plugin_doctor_version": "Version",
   "plugin_doctor_version_latest": "Already using the latest version: %s",
-  "plugin_doctor_version_update_available": "New version available, current: %s, latest: %s",
+  "plugin_doctor_version_update_available": "New version available",
   "plugin_doctor_version_download": "Go to download page",
   "plugin_doctor_version_apply_update": "Apply update",
   "plugin_doctor_version_update_notes": "Update Notes",
   "plugin_doctor_version_update_error": "Update Check Failed",
   "plugin_doctor_version_no_release_notes": "No release notes available for this update.",
   "plugin_doctor_version_auto_update_disabled": "Auto update is disabled",
+  "plugin_update_plugin_name": "Update",
+  "plugin_update_plugin_description": "Check and install Wox updates",
+  "plugin_update_title": "Update",
+  "plugin_update_action_check": "Check for updates",
+  "plugin_update_action_manual_download": "Download manually",
+  "plugin_update_action_apply": "Install update",
+  "plugin_update_action_enable_auto_update": "Enable auto update",
+  "plugin_update_action_open_settings": "Open settings",
+  "plugin_update_notify_checking": "Checking for updates...",
+  "plugin_update_notify_downloading": "Downloading update...",
+  "plugin_update_notify_ready": "Update is ready to install",
+  "plugin_update_notify_up_to_date": "Up to date",
+  "plugin_update_notify_error": "Update error: %s",
+  "plugin_update_status_none": "Up to date",
+  "plugin_update_status_available": "Update available",
+  "plugin_update_status_downloading": "Downloading...",
+  "plugin_update_status_ready": "Ready to install",
+  "plugin_update_status_error": "Update error",
+  "plugin_update_status_auto_update_disabled": "Auto update disabled",
+  "plugin_update_apply_failed": "Apply update failed: %s",
+  "plugin_update_auto_update_disabled_title": "Auto update is disabled",
+  "plugin_update_auto_update_disabled_desc": "Enable auto update to check/download updates automatically. You can turn it off again in Settings anytime.",
+  "plugin_update_current_version": "Current",
+  "plugin_update_latest_version": "Latest",
+  "plugin_update_auto_update_label": "Auto update",
+  "plugin_update_auto_update_enabled": "Enabled",
+  "plugin_update_auto_update_disabled": "Disabled",
+  "plugin_update_unknown": "-",
+  "plugin_update_release_notes": "Release notes",
+  "plugin_update_no_release_notes": "No release notes available.",
   "plugin_doctor_accessibility": "Accessibility",
   "plugin_doctor_accessibility_required": "You need to grant Wox Accessibility permission to use this plugin",
   "plugin_doctor_accessibility_open_settings": "Open Accessibility Settings",
   "plugin_doctor_accessibility_granted": "You have granted Wox Accessibility permission",
   "plugin_doctor_accessibility_explanation": "# Why Wox Needs Accessibility Permission\n\nWox requires accessibility permission to perform the following functions:\n\n- **Global Hotkeys**: Allow you to activate Wox from anywhere using keyboard shortcuts\n- **Window Management**: Get information about active windows to provide context-aware results\n- **Keyboard Simulation**: Enable features like pasting results directly into applications\n\nWithout this permission, some features of Wox will be limited or unavailable.",
   "plugin_doctor_check": "Check",
+  "plugin_doctor_go_to_update": "Go to update",
   "plugin_doctor_database": "Database integrity",
   "plugin_doctor_database_not_run": "Integrity checks not run",
   "plugin_doctor_database_ok": "Database integrity: OK",
