--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -414,19 +414,50 @@
   "plugin_url_open_in_browser": "Abrir no navegador",
   "plugin_doctor_version": "Versão",
   "plugin_doctor_version_latest": "Já está usando a versão mais recente: %s",
-  "plugin_doctor_version_update_available": "Nova versão disponível, atual: %s, mais recente: %s",
+  "plugin_doctor_version_update_available": "Nova versão disponível",
   "plugin_doctor_version_download": "Ir para a página de download",
   "plugin_doctor_version_apply_update": "Aplicar atualização",
   "plugin_doctor_version_update_notes": "Notas da Atualização",
   "plugin_doctor_version_update_error": "Falha na verificação de atualização",
   "plugin_doctor_version_no_release_notes": "Não há notas de lançamento disponíveis para esta atualização.",
   "plugin_doctor_version_auto_update_disabled": "Atualização automática desativada",
+  "plugin_update_plugin_name": "Atualização",
+  "plugin_update_plugin_description": "Verificar e instalar atualizações do Wox",
+  "plugin_update_title": "Atualização",
+  "plugin_update_action_check": "Verificar atualizações",
+  "plugin_update_action_manual_download": "Baixar manualmente",
+  "plugin_update_action_apply": "Instalar atualização",
+  "plugin_update_action_enable_auto_update": "Ativar atualização automática",
+  "plugin_update_action_open_settings": "Abrir configurações",
+  "plugin_update_notify_checking": "Verificando atualizações...",
+  "plugin_update_notify_downloading": "Baixando atualização...",
+  "plugin_update_notify_ready": "Atualização pronta para instalar",
+  "plugin_update_notify_up_to_date": "Já está atualizado",
+  "plugin_update_notify_error": "Erro de atualização: %s",
+  "plugin_update_status_none": "Já está atualizado",
+  "plugin_update_status_available": "Atualização disponível",
+  "plugin_update_status_downloading": "Baixando...",
+  "plugin_update_status_ready": "Pronto para instalar",
+  "plugin_update_status_error": "Erro de atualização",
+  "plugin_update_status_auto_update_disabled": "Atualização automática desativada",
+  "plugin_update_apply_failed": "Falha ao aplicar atualização: %s",
+  "plugin_update_auto_update_disabled_title": "Atualização automática desativada",
+  "plugin_update_auto_update_disabled_desc": "Ative a atualização automática para verificar/baixar atualizações automaticamente. Você pode desativá-la novamente nas Configurações a qualquer momento.",
+  "plugin_update_current_version": "Atual",
+  "plugin_update_latest_version": "Mais recente",
+  "plugin_update_auto_update_label": "Atualização automática",
+  "plugin_update_auto_update_enabled": "Ativada",
+  "plugin_update_auto_update_disabled": "Desativada",
+  "plugin_update_unknown": "-",
+  "plugin_update_release_notes": "Notas da versão",
+  "plugin_update_no_release_notes": "Nenhuma nota de versão disponível.",
   "plugin_doctor_accessibility": "Acessibilidade",
   "plugin_doctor_accessibility_required": "Você precisa conceder permissão de Acessibilidade ao Wox para usar este plugin",
   "plugin_doctor_accessibility_open_settings": "Abrir configurações de acessibilidade",
   "plugin_doctor_accessibility_granted": "Você concedeu permissão de Acessibilidade ao Wox",
   "plugin_doctor_accessibility_explanation": "# Por que o Wox precisa de permissão de Acessibilidade\n\nO Wox requer permissão de acessibilidade para realizar as seguintes funções:\n\n- **Teclas de atalho globais**: Permite ativar o Wox de qualquer lugar usando atalhos de teclado\n- **Gerenciamento de janelas**: Obter informações sobre janelas ativas para fornecer resultados contextuais\n- **Simulação de teclado**: Habilitar recursos como colar resultados diretamente em aplicativos\n\nSem essa permissão, alguns recursos do Wox serão limitados ou indisponíveis.",
   "plugin_doctor_check": "Verificar",
+  "plugin_doctor_go_to_update": "Ir para atualização",
   "plugin_doctor_database": "Integridade do banco de dados",
   "plugin_doctor_database_not_run": "Verificações de integridade não executadas",
   "plugin_doctor_database_ok": "Integridade do banco de dados: OK",
