--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -414,19 +414,50 @@
   "plugin_url_open_in_browser": "Открыть в браузере",
   "plugin_doctor_version": "Версия",
   "plugin_doctor_version_latest": "Уже используется последняя версия: %s",
-  "plugin_doctor_version_update_available": "Доступна новая версия, текущая: %s, последняя: %s",
+  "plugin_doctor_version_update_available": "Доступна новая версия",
   "plugin_doctor_version_download": "Перейти на страницу загрузки",
   "plugin_doctor_version_apply_update": "Применить обновление",
   "plugin_doctor_version_update_notes": "Примечания к обновлению",
   "plugin_doctor_version_update_error": "Ошибка проверки обновления",
   "plugin_doctor_version_no_release_notes": "Для этого обновления нет доступных примечаний к выпуску.",
   "plugin_doctor_version_auto_update_disabled": "Автообновление отключено",
+  "plugin_update_plugin_name": "Обновление",
+  "plugin_update_plugin_description": "Проверка и установка обновлений Wox",
+  "plugin_update_title": "Обновление",
+  "plugin_update_action_check": "Проверить обновления",
+  "plugin_update_action_manual_download": "Скачать вручную",
+  "plugin_update_action_apply": "Установить обновление",
+  "plugin_update_action_enable_auto_update": "Включить автообновление",
+  "plugin_update_action_open_settings": "Открыть настройки",
+  "plugin_update_notify_checking": "Проверка обновлений...",
+  "plugin_update_notify_downloading": "Загрузка обновления...",
+  "plugin_update_notify_ready": "Обновление готово к установке",
+  "plugin_update_notify_up_to_date": "Уже обновлено",
+  "plugin_update_notify_error": "Ошибка обновления: %s",
+  "plugin_update_status_none": "Уже обновлено",
+  "plugin_update_status_available": "Доступно обновление",
+  "plugin_update_status_downloading": "Загрузка...",
+  "plugin_update_status_ready": "Готово к установке",
+  "plugin_update_status_error": "Ошибка обновления",
+  "plugin_update_status_auto_update_disabled": "Автообновление отключено",
+  "plugin_update_apply_failed": "Не удалось применить обновление: %s",
+  "plugin_update_auto_update_disabled_title": "Автообновление отключено",
+  "plugin_update_auto_update_disabled_desc": "Включите автообновление, чтобы автоматически проверять/загружать обновления. Вы можете отключить его позже в настройках.",
+  "plugin_update_current_version": "Текущая",
+  "plugin_update_latest_version": "Последняя",
+  "plugin_update_auto_update_label": "Автообновление",
+  "plugin_update_auto_update_enabled": "Включено",
+  "plugin_update_auto_update_disabled": "Отключено",
+  "plugin_update_unknown": "-",
+  "plugin_update_release_notes": "Примечания к выпуску",
+  "plugin_update_no_release_notes": "Нет доступных примечаний к выпуску.",
   "plugin_doctor_accessibility": "Доступность",
   "plugin_doctor_accessibility_required": "Вам нужно предоставить Wox разрешение на доступность для использования этого плагина",
   "plugin_doctor_accessibility_open_settings": "Открыть настройки доступности",
   "plugin_doctor_accessibility_granted": "Вы предоставили Wox разрешение на доступность",
   "plugin_doctor_accessibility_explanation": "# Почему Wox нуждается в разрешении на доступность\n\nWox требует разрешение на доступность для выполнения следующих функций:\n\n- **Глобальные горячие клавиши**: Позволяют активировать Wox из любого места с помощью сочетаний клавиш\n- **Управление окнами**: Получение информации об активных окнах для предоставления контекстно-зависимых результатов\n- **Эмуляция клавиатуры**: Включение функций, таких как вставка результатов непосредственно в приложения\n\nБез этого разрешения некоторые функции Wox будут ограничены или недоступны.",
   "plugin_doctor_check": "Проверить",
+  "plugin_doctor_go_to_update": "Перейти к обновлению",
   "plugin_doctor_database": "Целостность базы данных",
   "plugin_doctor_database_not_run": "Проверки целостности не выполнены",
   "plugin_doctor_database_ok": "Целостность базы данных: ОК",
