--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -417,19 +417,50 @@
   "plugin_websearch_web_searches": "网页搜索",
   "plugin_doctor_version": "版本",
   "plugin_doctor_version_latest": "已经是最新版本：%s",
-  "plugin_doctor_version_update_available": "发现新版本，当前版：%s，最新版本：%s",
+  "plugin_doctor_version_update_available": "发现新版本",
   "plugin_doctor_version_download": "前往下载页面",
   "plugin_doctor_version_apply_update": "应用更新",
   "plugin_doctor_version_update_notes": "更新说明",
   "plugin_doctor_version_update_error": "更新检查失败",
   "plugin_doctor_version_no_release_notes": "此更新没有提供更新说明。",
   "plugin_doctor_version_auto_update_disabled": "自动更新已禁用",
+  "plugin_update_plugin_name": "更新",
+  "plugin_update_plugin_description": "检查并安装 Wox 更新",
+  "plugin_update_title": "更新",
+  "plugin_update_action_check": "检查更新",
+  "plugin_update_action_manual_download": "手动下载安装",
+  "plugin_update_action_apply": "安装更新",
+  "plugin_update_action_enable_auto_update": "启用自动更新",
+  "plugin_update_action_open_settings": "打开设置",
+  "plugin_update_notify_checking": "正在检查更新…",
+  "plugin_update_notify_downloading": "正在下载更新…",
+  "plugin_update_notify_ready": "更新已就绪，可安装",
+  "plugin_update_notify_up_to_date": "已是最新版本",
+  "plugin_update_notify_error": "更新错误：%s",
+  "plugin_update_status_none": "已是最新版本",
+  "plugin_update_status_available": "发现新版本",
+  "plugin_update_status_downloading": "下载中…",
+  "plugin_update_status_ready": "可安装",
+  "plugin_update_status_error": "更新错误",
+  "plugin_update_status_auto_update_disabled": "自动更新已禁用",
+  "plugin_update_apply_failed": "安装更新失败：%s",
+  "plugin_update_auto_update_disabled_title": "自动更新已禁用",
+  "plugin_update_auto_update_disabled_desc": "启用自动更新后即可自动检查/下载更新；也可以在设置中随时关闭。",
+  "plugin_update_current_version": "当前版本",
+  "plugin_update_latest_version": "最新版本",
+  "plugin_update_auto_update_label": "自动更新",
+  "plugin_update_auto_update_enabled": "已启用",
+  "plugin_update_auto_update_disabled": "已禁用",
+  "plugin_update_unknown": "-",
+  "plugin_update_release_notes": "更新说明",
+  "plugin_update_no_release_notes": "没有可用的更新说明。",
   "plugin_doctor_accessibility": "辅助功能",
   "plugin_doctor_accessibility_required": "您需要授予 Wox 辅助功能权限才能使用此插件",
   "plugin_doctor_accessibility_open_settings": "打开辅助功能设置",
   "plugin_doctor_accessibility_granted": "您已授予 Wox 辅助功能权限",
   "plugin_doctor_accessibility_explanation": "# 为什么 Wox 需要辅助功能权限\n\nWox 需要辅助功能权限来执行以下功能：\n\n- **全局快捷键**：允许您通过键盘快捷键从任何地方激活 Wox\n- **窗口管理**：获取活动窗口的信息，以提供上下文相关的结果\n- **键盘模拟**：启用直接将结果粘贴到应用程序等功能\n\n如果没有此权限，Wox 的某些功能将受到限制或不可用。",
   "plugin_doctor_check": "检查",
+  "plugin_doctor_go_to_update": "前往更新",
   "plugin_doctor_database": "数据库完整性",
   "plugin_doctor_database_not_run": "未运行完整性检查",
   "plugin_doctor_database_ok": "数据库完整性：正常",
