feat(emoji): Add ai search support for emoji plugin

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -698,6 +698,16 @@
   "plugin_emoji_add_keyword": "Add keyword",
   "plugin_emoji_add_keyword_label": "Keyword",
   "plugin_emoji_add_keyword_hint": "Add custom keywords to help you find this emoji faster, separate multiple with commas.",
+  "plugin_emoji_ai_group": "AI Matches",
+  "plugin_emoji_ai_matching": "AI matching...",
+  "plugin_emoji_ai_matching_subtitle": "Generating emoji suggestions",
+  "plugin_emoji_ai_done": "AI results ready",
+  "plugin_emoji_ai_no_result": "AI found no results",
+  "plugin_emoji_ai_failed": "AI match failed",
+  "plugin_emoji_setting_ai_enable_label": "Enable AI emoji matching",
+  "plugin_emoji_setting_ai_enable_tooltip": "Use AI to match emojis when typing.",
+  "plugin_emoji_setting_ai_model_label": "AI model",
+  "plugin_emoji_setting_ai_model_tooltip": "Model used for AI emoji matching.",
   "ui_not_supported_field": "Field type not supported",
   "ui_ai_chat_show_sidebar": "Show Sidebar",
   "ui_ai_chat_hide_sidebar": "Hide Sidebar",
