--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -691,6 +691,16 @@
   "plugin_emoji_add_keyword": "Adicionar palavra-chave",
   "plugin_emoji_add_keyword_label": "Palavra-chave",
   "plugin_emoji_add_keyword_hint": "Adicione palavras-chave personalizadas para encontrar este emoji mais rápido, separadas por vírgulas.",
+  "plugin_emoji_ai_group": "Correspondências de IA",
+  "plugin_emoji_ai_matching": "Correspondendo com IA...",
+  "plugin_emoji_ai_matching_subtitle": "Gerando sugestões de emoji",
+  "plugin_emoji_ai_done": "Resultados de IA prontos",
+  "plugin_emoji_ai_no_result": "A IA não encontrou resultados",
+  "plugin_emoji_ai_failed": "Falha na correspondência de IA",
+  "plugin_emoji_setting_ai_enable_label": "Ativar correspondência de emojis por IA",
+  "plugin_emoji_setting_ai_enable_tooltip": "Use IA para combinar emojis enquanto digita.",
+  "plugin_emoji_setting_ai_model_label": "Modelo de IA",
+  "plugin_emoji_setting_ai_model_tooltip": "Modelo usado para correspondência de emojis por IA.",
   "plugin_clipboard_copy_date": "Data da cópia",
   "plugin_clipboard_copy_characters": "Caracteres copiados",
   "plugin_clipboard_image_width": "Largura da imagem",
