--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -690,6 +690,16 @@
   "plugin_emoji_add_keyword": "Добавить ключевое слово",
   "plugin_emoji_add_keyword_label": "Ключевое слово",
   "plugin_emoji_add_keyword_hint": "Добавьте ключевые слова для быстрого поиска этого эмодзи, разделяйте запятыми.",
+  "plugin_emoji_ai_group": "Подборка ИИ",
+  "plugin_emoji_ai_matching": "ИИ подбирает...",
+  "plugin_emoji_ai_matching_subtitle": "Генерация предложений эмодзи",
+  "plugin_emoji_ai_done": "Результаты ИИ готовы",
+  "plugin_emoji_ai_no_result": "ИИ не нашел результатов",
+  "plugin_emoji_ai_failed": "Сбой подбора ИИ",
+  "plugin_emoji_setting_ai_enable_label": "Включить подбор эмодзи ИИ",
+  "plugin_emoji_setting_ai_enable_tooltip": "Использовать ИИ для подбора эмодзи при вводе.",
+  "plugin_emoji_setting_ai_model_label": "Модель ИИ",
+  "plugin_emoji_setting_ai_model_tooltip": "Модель, используемая для подбора эмодзи ИИ.",
   "plugin_clipboard_copy_date": "Дата копирования",
   "plugin_clipboard_copy_characters": "Скопировано символов",
   "plugin_clipboard_image_width": "Ширина изображения",
