--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -698,6 +698,16 @@
   "plugin_emoji_add_keyword": "添加关键字",
   "plugin_emoji_add_keyword_label": "关键字",
   "plugin_emoji_add_keyword_hint": "添加自定义关键字，帮助您更快搜索到该表情，多个关键字用逗号分隔。",
+  "plugin_emoji_ai_group": "AI 匹配",
+  "plugin_emoji_ai_matching": "AI 匹配中...",
+  "plugin_emoji_ai_matching_subtitle": "正在生成表情建议",
+  "plugin_emoji_ai_done": "AI 结果已就绪",
+  "plugin_emoji_ai_no_result": "AI 未找到结果",
+  "plugin_emoji_ai_failed": "AI 匹配失败",
+  "plugin_emoji_setting_ai_enable_label": "启用 AI 表情匹配",
+  "plugin_emoji_setting_ai_enable_tooltip": "使用 AI 在输入时匹配表情。",
+  "plugin_emoji_setting_ai_model_label": "AI 模型",
+  "plugin_emoji_setting_ai_model_tooltip": "用于表情匹配的 AI 模型。",
   "ui_not_supported_field": "该字段类型暂不支持",
   "ui_ai_chat_show_sidebar": "显示侧边栏",
   "ui_ai_chat_hide_sidebar": "隐藏侧边栏",
