feat: Implement auto appearance theme support
- Added functionality to detect and apply system dark/light themes in Windows.
- Introduced new components for theme auto preview and icon display.
- Updated WoxTheme entity to include properties for auto appearance and associated theme IDs.
- Enhanced WoxSettingController to manage installed themes for auto appearance.
- Modified WoxSettingThemeView to display hints for auto appearance settings.
- Refactored WoxApi and related components to streamline theme management.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -107,6 +107,7 @@
   "ui_setting_theme_description": "Description",
   "ui_setting_theme_empty_data": "Theme data is empty",
   "ui_setting_theme_system_tag": "System",
+  "ui_setting_theme_auto_appearance_hint": "This theme will automatically switch between light and dark modes based on your system appearance settings.",
   "ui_back": "Back",
   "ui_operation": "Operation",
   "ui_no_data": "No data",
