feat(shell): add support for custom shell commands with aliases
- Introduced a new setting to configure custom shell commands with aliases.
- Enabled global query to search and execute commands directly.
- Added JSON serialization for shell commands and their properties (Alias, Command, Enabled, Silent).
- Updated UI to allow users to manage shell commands through a table interface.
- Enhanced localization with new strings for English and Chinese.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -406,6 +406,14 @@
   "plugin_shell_property_duration": "Duration",
   "plugin_shell_property_start_time": "Start Time",
   "plugin_shell_property_exit_code": "Exit Code",
+  "plugin_shell_commands": "Commands",
+  "plugin_shell_commands_tooltip": "Configure custom shell commands with aliases. Use {query} as a placeholder for dynamic arguments. Search for an alias in global query to execute the command directly.",
+  "plugin_shell_command_alias": "Alias",
+  "plugin_shell_command_script": "Script",
+  "plugin_shell_command_script_tooltip": "The shell script to execute. Use {query} as a placeholder for user input. Example: curl ifconfig.me or pkill -f {query}",
+  "plugin_shell_command_enabled": "Enabled",
+  "plugin_shell_command_silent": "Silent",
+  "plugin_shell_command_silent_tooltip": "When enabled, execute in background silently. When disabled, jump to > trigger to show command output.",
   "plugin_websearch_trigger_keyword": "keyword",
   "plugin_websearch_trigger_keyword_tooltip": "The trigger keyword you want to use to trigger the search",
   "plugin_websearch_title": "Title",
