--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -407,6 +407,14 @@
   "plugin_shell_property_duration": "执行时长",
   "plugin_shell_property_start_time": "开始时间",
   "plugin_shell_property_exit_code": "退出码",
+  "plugin_shell_commands": "命令",
+  "plugin_shell_commands_tooltip": "配置自定义 Shell 命令别名。使用 {query} 作为动态参数占位符。在全局搜索中输入别名可直接执行命令。",
+  "plugin_shell_command_alias": "别名",
+  "plugin_shell_command_script": "脚本",
+  "plugin_shell_command_script_tooltip": "要执行的 Shell 脚本。使用 {query} 作为用户输入的占位符。示例：curl ifconfig.me 或 pkill -f {query}",
+  "plugin_shell_command_enabled": "启用",
+  "plugin_shell_command_silent": "静默",
+  "plugin_shell_command_silent_tooltip": "启用时，命令将在后台静默执行。禁用时，会跳转到 > 触发词显示命令输出。",
   "plugin_websearch_trigger_keyword": "关键字",
   "plugin_websearch_trigger_keyword_tooltip": "输入触发关键字触发该网页搜索",
   "plugin_websearch_title": "标题",
