feat: Add Explorer plugin for file navigation and enhance i18n support

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -299,6 +299,8 @@
   "plugin_doctor_plugin_description": "Check your system and Wox settings",
   "plugin_emoji_plugin_name": "Emoji",
   "plugin_emoji_plugin_description": "Search and copy emojis",
+  "plugin_explorer_plugin_name": "Current Folder Search",
+  "plugin_explorer_plugin_description": "Search files in the currently active file manager window",
   "plugin_file_plugin_name": "Files",
   "plugin_file_plugin_description": "Search files in your computer",
   "plugin_indicator_plugin_name": "System Plugin Indicator",
@@ -344,6 +346,8 @@
   "plugin_app_windows_settings_privacy_security": "Privacy & security",
   "plugin_app_windows_settings_windows_update": "Windows Update",
   "plugin_browser_bookmark_open_in_browser": "Open in browser",
+  "plugin_explorer_open": "Open",
+  "plugin_explorer_open_containing_folder": "Open containing folder",
   "plugin_clipboard_copy_date": "Copy date",
   "plugin_clipboard_copy_characters": "Copy characters",
   "plugin_clipboard_image_width": "Image width",
