--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -296,6 +296,8 @@
   "plugin_doctor_plugin_description": "Verificar seu sistema e as configurações do Wox",
   "plugin_emoji_plugin_name": "Emoji",
   "plugin_emoji_plugin_description": "Pesquisar e copiar emojis",
+  "plugin_explorer_plugin_name": "Pesquisa na pasta atual",
+  "plugin_explorer_plugin_description": "Pesquisar arquivos na janela do gerenciador de arquivos ativa no momento",
   "plugin_file_plugin_name": "Arquivos",
   "plugin_file_plugin_description": "Pesquisar arquivos no seu computador",
   "plugin_indicator_plugin_name": "Indicador de plugins do sistema",
@@ -341,6 +343,8 @@
   "plugin_app_windows_settings_privacy_security": "Privacidade e segurança",
   "plugin_app_windows_settings_windows_update": "Windows Update",
   "plugin_browser_bookmark_open_in_browser": "Abrir no navegador",
+  "plugin_explorer_open": "Abrir",
+  "plugin_explorer_open_containing_folder": "Abrir pasta contendo",
   "plugin_clipboard_copy_date": "Copiar data",
   "plugin_clipboard_copy_characters": "Copiar caracteres",
   "plugin_clipboard_image_width": "Largura da imagem",
