--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -299,6 +299,8 @@
   "plugin_doctor_plugin_description": "检查系统和 Wox 设置",
   "plugin_emoji_plugin_name": "表情符号",
   "plugin_emoji_plugin_description": "搜索并复制表情符号",
+  "plugin_explorer_plugin_name": "当前文件夹搜索",
+  "plugin_explorer_plugin_description": "在当前活动的文件管理器窗口中搜索文件",
   "plugin_file_plugin_name": "文件",
   "plugin_file_plugin_description": "搜索电脑中的文件",
   "plugin_indicator_plugin_name": "系统插件指示器",
@@ -345,6 +347,8 @@
   "plugin_app_windows_settings_privacy_security": "隐私和安全性",
   "plugin_app_windows_settings_windows_update": "Windows 更新",
   "plugin_browser_bookmark_open_in_browser": "在浏览器中打开",
+  "plugin_explorer_open": "打开",
+  "plugin_explorer_open_containing_folder": "打开所在文件夹",
   "plugin_clipboard_copy_date": "复制日期",
   "plugin_clipboard_copy_characters": "复制字符",
   "plugin_clipboard_image_width": "图片宽度",
