--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -296,6 +296,8 @@
   "plugin_doctor_plugin_description": "Проверка системы и настроек Wox",
   "plugin_emoji_plugin_name": "Эмодзи",
   "plugin_emoji_plugin_description": "Поиск и копирование эмодзи",
+  "plugin_explorer_plugin_name": "Поиск в текущей папке",
+  "plugin_explorer_plugin_description": "Поиск файлов в активном окне файлового менеджера",
   "plugin_file_plugin_name": "Файлы",
   "plugin_file_plugin_description": "Поиск файлов на вашем компьютере",
   "plugin_indicator_plugin_name": "Индикатор системных плагинов",
@@ -341,6 +343,8 @@
   "plugin_app_windows_settings_privacy_security": "Конфиденциальность и безопасность",
   "plugin_app_windows_settings_windows_update": "Центр обновления Windows",
   "plugin_browser_bookmark_open_in_browser": "Открыть в браузере",
+  "plugin_explorer_open": "Открыть",
+  "plugin_explorer_open_containing_folder": "Открыть содержащую папку",
   "plugin_clipboard_copy_date": "Копировать дату",
   "plugin_clipboard_copy_characters": "Копировать символы",
   "plugin_clipboard_image_width": "Ширина изображения",
